[tool.poetry]
name = "medspacy"
version = "0.2.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.3.1"
PyRuSH = "^1.0.3"
pysbd = "^0.3.4"
medspacy-quickumls = "^2.4.1"
ipywidgets = "^7.7.0"
quickumls = "^1.4.0"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
